--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": ".",
+  "homepage": "https://pbaki.github.io/shopping-cart",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
